--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.10",
     "react-router-dom": "^7.9.1",
