--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://todo-mern-backend-msuy.onrender.com/api/tasks
+REACT_APP_API_URL= https://todo-mern-backend-3.onrender.com/api
